# tg-yunying

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.server.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  __main__.py  admin_chats.py  ai_gateway.py  auth.py  config.py  database.py  gateway_contracts.py  gateway_mock.py  gateway_telethon_content.py  gateway_telethon_media.py  gateways.py  main.py  permission_middleware.py  search_keywords.py  security.py  storage.py  task_queue.py  telethon_lifecycle.py  timezone.py  worker.py  worker_health.py
backend/migrations/: env.py
backend/scripts/: preseed_target_ref_invalid.py  reconcile_ai_group_daily_coverage.py  reconcile_outbound_target_identity.py  run_capacity_benchmark.py
backend/tests/: ai_generation_commit_recovery_test_support.py  ai_generation_phase_test_support.py  ai_group_voice_profile_fixtures.py  ai_task_limits_test_support.py  capacity_ai_dispatch_test_support.py  capacity_ai_planner_test_support.py  channel_comment_dispatch_test_support.py  channel_comment_planner_test_support.py  conftest.py  operations_ai_test_support.py  real_planner_boundaries_test_support.py  test_account_actions_dataflow.py  test_account_authorization_assets_dataflow.py  test_account_authorization_backfill.py  test_account_authorizations.py  test_account_availability.py  test_account_capacity_bulk_equivalence.py  test_account_center_prd_contracts.py  test_account_deep_link_dataflow.py  (+210 more)
(+685 files in other folders)
